--- a/main/statscience/assets/templates/statsapp/create_statistic.html
+++ b/main/statscience/assets/templates/statsapp/create_statistic.html
@@ -11,11 +11,19 @@
 <!-- All main content goes here-->
 <div id="container">
     <!-- A Form to create a new statistic -->
-    <form action="{% url 'create' %}" method="POST">
+    <form id="stat_form">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Create">
+        <a id="back_btn" href="{% url 'home' %}">Back</a>
     </form>
+    <div id="toast" style="display:none; position: fixed; bottom: 10px; right: 10px; background: #333; color: white; padding: 10px; border-radius: 5px;"></div>
+
+    <!-- Pass the URL to JavaScript via this variable as you cannot load django variables in JS files -->
+    <script>
+        let statUrl = "{% url 'create_statistic' %}";
+    </script>
+    <script src="{% static 'statsapp/js/statmake.js' %}"></script>
 </div>
 </body>
 </html>
