--- a/main/statscience/assets/templates/statsapp/delete_statistic.html
+++ b/main/statscience/assets/templates/statsapp/delete_statistic.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistic creation</title>
+    <!-- This page is basically just create_statistic.html copy-pasted so we can reuse this CSS code. -->
     <link rel="stylesheet" href="{% static 'statsapp/css/create.css' %}">
+    <!-- This over-rides the CSS that's not valid for this page -->
+    <link rel="stylesheet" href="{% static 'statsapp/css/delete.css' %}">
 </head>
 <body>
 <!-- All main content goes here-->
 <div id="container">
     <!-- A Form to create a new statistic -->
-    <form id="mk_stat_form">
+    <form id="rm_stat_form">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Create">
+        <input type="submit" value="Delete">
         <a id="back_btn" href="{% url 'home' %}">Back</a>
     </form>
     <div id="toast" style="display:none; position: fixed; bottom: 10px; right: 10px; background: #333; color: white; padding: 10px; border-radius: 5px;"></div>
@@ -22,7 +25,7 @@
     <!-- Pass the URL to JavaScript via this variable as you cannot load django variables in JS files -->
     <script src="{% static 'statsapp/js/make_or_rm_stat.js' %}"></script>
     <script>
-        initializeStatForm(mode='create', form_id='mk_stat_form')
+        initializeStatForm(mode='delete', form_id='rm_stat_form')
     </script>
 </div>
 </body>
