--- a/statscience/assets/templates/statsapp/statisticview.html
+++ b/statscience/assets/templates/statsapp/statisticview.html
@@ -31,6 +31,14 @@
                 <span class="status-label">Last changed:</span>
                 <span class="status-value debug">{{ condition_start_date }}</span>
             </div>
+            <div class="status-pair">
+                <span class="status-label">Trend:</span>
+                <span class="status-value debug">{{ condition_trend }}</span>
+            </div>
+            <div class="status-pair">
+                <span class="status-label">Trend Strength:</span>
+                <span class="status-value debug">{{ trend_strength }}</span>
+            </div>
         </div>
     </div>
 </div>
